Added example file for flat segment tree usage.

--- a/example/Makefile
+++ b/example/Makefile
@@ -29,11 +29,14 @@ CPPFLAGS=-I../inc -Wall -Os -std=c++0x
 
 EXEC= \
 	segment_tree \
+	flat_segment_tree \
 	rectangle_set
 
 all: $(EXEC)
 
 segment_tree: segment_tree.cpp
+
+flat_segment_tree: flat_segment_tree.cpp
 
 rectangle_set: rectangle_set.cpp
 
