--- a/configure.ac
+++ b/configure.ac
@@ -16,4 +16,15 @@ AC_ARG_WITH(hash-container,
                           Example:  --with-hash-container=boost],
 ,with_hash_container=c++0x)
 
+AC_MSG_CHECKING([prefix])
+if test "$prefix" = "NONE"; then
+  prefix=/usr/local
+fi
+PREFIX=$prefix
+AC_MSG_RESULT([$prefix])
+AC_SUBST(PREFIX)
+
+AC_MSG_CHECKING([hash container type])
+AC_MSG_RESULT([$with_hash_container])
+
 AC_OUTPUT(Makefile)
