Use INCDIR and SRCDIR instead of hard-coding them.

--- a/Makefile.in
+++ b/Makefile.in
@@ -117,9 +117,9 @@ install:
 	mkdir -p @PREFIX@/share/mdds-devel/src
 	mkdir -p @PREFIX@/share/mdds-devel/example
 	mkdir -p @PREFIX@/share/doc/packages/mdds-devel/
-	cp inc/mdds/*.hpp @PREFIX@/include/mdds/
+	cp $(INCDIR)/mdds/*.hpp @PREFIX@/include/mdds/
 	cp Makefile @PREFIX@/share/mdds-devel/
-	cp src/*.cpp @PREFIX@/share/mdds-devel/src/
+	cp $(SRCDIR)/*.cpp @PREFIX@/share/mdds-devel/src/
 	cp example/* @PREFIX@/share/mdds-devel/example/
 	cp AUTHORS NEWS README @PREFIX@/share/doc/packages/mdds-devel/
 
