Tweaked make install procedure and updated the rpm spec file.

--- a/Makefile.in
+++ b/Makefile.in
@@ -117,7 +117,7 @@ install:
 	mkdir -p @PREFIX@/share/mdds-devel/src
 	mkdir -p @PREFIX@/share/mdds-devel/example
 	mkdir -p @PREFIX@/share/doc/packages/mdds-devel/
-	cp $(INCDIR)/mdds/*.hpp @PREFIX@/include/mdds/
+	cp -R $(INCDIR)/mdds @PREFIX@/include/
 	cp Makefile @PREFIX@/share/mdds-devel/
 	cp $(SRCDIR)/*.cpp @PREFIX@/share/mdds-devel/src/
 	cp example/* @PREFIX@/share/mdds-devel/example/
