Moved storage_base out of mixed_type_matrix class scope.
Also removed virtual-ness from most of the interfaces to reduce vtable
size.  However, the destructor must stay virtual since the derived
classes have different sizes than their base class.  I'll look into
whether that can be made non-virtual as well.

--- a/Makefile.in
+++ b/Makefile.in
@@ -21,6 +21,9 @@ HEADERS= \
 	$(INCDIR)/mdds/point_quad_tree.hpp \
 	$(INCDIR)/mdds/segment_tree.hpp \
 	$(INCDIR)/mdds/mixed_type_matrix.hpp \
+	$(INCDIR)/mdds/mixed_type_matrix_def.inl \
+	$(INCDIR)/mdds/mixed_type_matrix_storage.hpp \
+	$(INCDIR)/mdds/mixed_type_matrix_flag_storage.hpp \
 	$(INCDIR)/mdds/rectangle_set.hpp
 
 DEPENDS= \
