make install should install mdds/*.inl files too.

--- a/Makefile.in
+++ b/Makefile.in
@@ -133,6 +133,7 @@ install: $(HEADERS)
 	install -d @PREFIX@/share/mdds-devel/example
 	install -d @PREFIX@/share/doc/packages/mdds-devel/
 	install -m 644 -t @PREFIX@/include/mdds $(INCDIR)/mdds/*.hpp
+	install -m 644 -t @PREFIX@/include/mdds $(INCDIR)/mdds/*.inl
 	install -m 644 -t @PREFIX@/include/mdds/hash_container $(INCDIR)/mdds/hash_container/*.hpp
 	install -m 644 -t @PREFIX@/share/mdds-devel/example/ example/*
 	install -m 644 -t @PREFIX@/share/doc/packages/mdds-devel/ AUTHORS NEWS README
