Use autoconf variable to set version number across multiple files.

--- a/bin/pack-release.sh.in
+++ b/bin/pack-release.sh.in
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-VERSION=0.4.0
+VERSION=@VERSION@
 DIR=mdds_$VERSION
 hg clone https://multidimalgorithm.googlecode.com/hg/ $DIR
 pushd .
