Get version info from VERSION file, not from configure.ac.
This way I can remove the bin directory from the source package.

--- a/configure.ac
+++ b/configure.ac
@@ -47,4 +47,4 @@ AC_SUBST(CPPFLAGS)
 AC_OUTPUT(Makefile)
 AC_OUTPUT(example/Makefile)
 AC_OUTPUT(misc/mdds.spec)
-AC_OUTPUT(bin/pack-release.sh)
+AC_OUTPUT(VERSION)
