Command line options to switch on/off func test and perf test for flat_segment_tree.

--- a/Makefile.in
+++ b/Makefile.in
@@ -94,7 +94,10 @@ $(OBJDIR)/template_test.o: $(SRCDIR)/template_test.cpp $(DEPENDS)
 	$(CXX) $(CPPFLAGS) -c -o $@ $(SRCDIR)/template_test.cpp
 
 test.fst: flat_segment_tree_test
-	./flat_segment_tree_test
+	./flat_segment_tree_test func
+
+test.fst.perf: flat_segment_tree_test
+	./flat_segment_tree_test perf
 
 test.fst.mem: flat_segment_tree_test
 	valgrind --tool=memcheck --leak-check=full ./flat_segment_tree_test
