--- a/misc/mdds.spec.in
+++ b/misc/mdds.spec.in
@@ -3,9 +3,10 @@ Version:        @VERSION@
 Release:        1
 Url:            http://code.google.com/p/multidimalgorithm/
 License:        MIT/X11
-Source:         mdds_%{version}.tar.bz2
+Source:         %{name}_%{version}.tar.bz2
 Group:          Development/Libraries/C and C++
 Summary:        A collection of multi-dimensional data structure and indexing algorithm
+BuildArch:      noarch
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 BuildRequires:  gcc-c++, libstdc++-devel, boost-devel 
 Requires:       boost-devel >= 1.39
@@ -34,27 +35,26 @@ Authors:
 --------
     Kohei Yoshida <kyoshida@novell.com>
 
-%define _docdir %{_defaultdocdir}/mdds-devel
+%define _docdir %{_defaultdocdir}/%{name}-devel
 
 %prep
 %setup -q -n %{name}_%{version}
 
 %build
-./configure --prefix=%buildroot/usr --docdir=%buildroot%{_docdir}
+%configure --docdir=%{_docdir}
 
 %check
 #make check
 
 %install
-make install
+make DESTDIR=%buildroot install
 
 %clean
 rm -rf %buildroot
 
 %files devel
 %defattr(-,root,root)
-%dir %{_docdir}
-%{_includedir}/mdds  
-%doc %{_docdir}/*  
+%doc %{_docdir}
+%{_includedir}/%{name}
 
 %changelog
