--- a/Makefile.in
+++ b/Makefile.in
@@ -18,18 +18,25 @@ EXECS= \
 	rectangle_set_test
 
 HEADERS= \
-	$(INCDIR)/mdds/node.hpp \
-	$(INCDIR)/mdds/quad_node.hpp \
-	$(INCDIR)/mdds/global.hpp \
-	$(INCDIR)/mdds/flat_segment_tree.hpp \
 	$(INCDIR)/mdds/flat_segment_tree_def.inl \
-	$(INCDIR)/mdds/point_quad_tree.hpp \
-	$(INCDIR)/mdds/segment_tree.hpp \
-	$(INCDIR)/mdds/mixed_type_matrix.hpp \
+	$(INCDIR)/mdds/flat_segment_tree.hpp \
+	$(INCDIR)/mdds/flat_segment_tree_itr.hpp \
+	$(INCDIR)/mdds/global.hpp \
+	$(INCDIR)/mdds/hash_container/map.hpp \
 	$(INCDIR)/mdds/mixed_type_matrix_def.inl \
-	$(INCDIR)/mdds/mixed_type_matrix_storage.hpp \
+	$(INCDIR)/mdds/mixed_type_matrix_element.hpp \
 	$(INCDIR)/mdds/mixed_type_matrix_flag_storage.hpp \
-	$(INCDIR)/mdds/rectangle_set.hpp
+	$(INCDIR)/mdds/mixed_type_matrix.hpp \
+	$(INCDIR)/mdds/mixed_type_matrix_storage_filled_linear.inl \
+	$(INCDIR)/mdds/mixed_type_matrix_storage_filled_nested_array.inl \
+	$(INCDIR)/mdds/mixed_type_matrix_storage.hpp \
+	$(INCDIR)/mdds/mixed_type_matrix_storage_sparse.inl \
+	$(INCDIR)/mdds/node.hpp \
+	$(INCDIR)/mdds/point_quad_tree.hpp \
+	$(INCDIR)/mdds/quad_node.hpp \
+	$(INCDIR)/mdds/rectangle_set_def.inl \
+	$(INCDIR)/mdds/rectangle_set.hpp \
+	$(INCDIR)/mdds/segment_tree.hpp
 
 DEPENDS= \
 	$(HEADERS)
