Build in Debug configuration for MSVC by default.

--- a/vsprojects/flat_segment_tree/flat_segment_tree.vcproj
+++ b/vsprojects/flat_segment_tree/flat_segment_tree.vcproj
@@ -40,6 +40,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="C:\Users\Kohei\Workspace\multidimalgorithm\include;C:\dev\boost_1_42_0"
+				PreprocessorDefinitions="UNIT_TEST;DEBUG_NODE_BASE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
