--- a/configure.ac
+++ b/configure.ac
@@ -8,11 +8,11 @@ AC_SUBST(PACKAGE_TARNAME)
 
 AC_ARG_WITH(hash-container,
 [
-  --with-hash-container   specify the type of hash containers to use in test 
-                          programs.  Supported types are: boost, c++0x, or 
+  --with-hash-container   specify the type of hash containers to use in test
+                          programs.  Supported types are: boost, c++0x, or
                           stlport.  c++0x is used if unspecified.
 
-                          With c++0x, we assume that unordered_map and 
+                          With c++0x, we assume that unordered_map and
                           unordered_set are available under the std namespace,
                           whereas with boost they are assumed to be defined in
                           the boost namespace.  When stlport is specified, we
@@ -34,7 +34,7 @@ AC_SUBST(SRCDIR)
 AC_SUBST(INCDIR)
 AC_SUBST(QUICKCHECKDIR)
 
-CPPFLAGS="-DDEBUG_NODE_BASE -DUNIT_TEST -Wall -Os -g -pedantic-errors"
+CPPFLAGS="-DDEBUG_NODE_BASE -DUNIT_TEST -Wall -Os -g -pedantic-errors -D_GLIBCXX_DEBUG"
 if test $with_hash_container = stlport; then
   CPPFLAGS="$CPPFLAGS -DMDDS_HASH_CONTAINER_STLPORT"
 elif test $with_hash_container = boost; then
@@ -42,7 +42,7 @@ elif test $with_hash_container = boost; then
 else
   CPPFLAGS="$CPPFLAGS -std=c++0x"
 fi
-  
+
 
 AC_SUBST(CPPFLAGS)
 
