Renamed files for trait and types for multi_type_vector.

--- a/vsprojects/grid_map_default/grid_map_default.vcproj
+++ b/vsprojects/grid_map_default/grid_map_default.vcproj
@@ -193,11 +193,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\include\mdds\grid_map_trait.hpp"
+				RelativePath="..\..\include\mdds\multi_type_vector_trait.hpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\include\mdds\grid_map_types.hpp"
+				RelativePath="..\..\include\mdds\multi_type_vector_types.hpp"
 				>
 			</File>
 		</Filter>
