--- a/example/Makefile.in
+++ b/example/Makefile.in
@@ -1,7 +1,7 @@
 #************************************************************************
 #
 # Copyright (c) 2010 Kohei Yoshida
-# 
+#
 # Permission is hereby granted, free of charge, to any person
 # obtaining a copy of this software and associated documentation
 # files (the "Software"), to deal in the Software without
@@ -10,10 +10,10 @@
 # copies of the Software, and to permit persons to whom the
 # Software is furnished to do so, subject to the following
 # conditions:
-# 
+#
 # The above copyright notice and this permission notice shall be
 # included in all copies or substantial portions of the Software.
-# 
+#
 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 # EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 # OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
@@ -32,7 +32,8 @@ EXEC= \
 	flat_segment_tree \
 	rectangle_set \
 	point_quad_tree \
-	mixed_type_matrix
+	mixed_type_matrix \
+	multi_type_vector
 
 all: $(EXEC)
 
@@ -45,6 +46,8 @@ rectangle_set: rectangle_set.cpp
 point_quad_tree: point_quad_tree.cpp
 
 mixed_type_matrix: mixed_type_matrix.cpp
+
+multi_type_vector: multi_type_vector.cpp
 
 clean:
 	rm -f $(EXEC)
