Pass hash container flag to nodebug CPPFLAGS too.

--- a/configure.ac
+++ b/configure.ac
@@ -35,15 +35,15 @@ AC_SUBST(INCDIR)
 AC_SUBST(QUICKCHECKDIR)
 
 CPPFLAGS_NODEBUG="-Wall -Os -g -pedantic-errors"
-CPPFLAGS="$CPPFLAGS_NODEBUG -DDEBUG_NODE_BASE -DUNIT_TEST"
 if test $with_hash_container = stlport; then
-  CPPFLAGS="$CPPFLAGS -DMDDS_HASH_CONTAINER_STLPORT"
+  CPPFLAGS_NODEBUG="$CPPFLAGS_NODEBUG -DMDDS_HASH_CONTAINER_STLPORT"
 elif test $with_hash_container = boost; then
-  CPPFLAGS="$CPPFLAGS -DMDDS_HASH_CONTAINER_BOOST"
+  CPPFLAGS_NODEBUG="$CPPFLAGS_NODEBUG -DMDDS_HASH_CONTAINER_BOOST"
 else
-  CPPFLAGS="$CPPFLAGS -std=c++0x"
+  CPPFLAGS_NODEBUG="$CPPFLAGS_NODEBUG -std=c++0x"
 fi
 
+CPPFLAGS="$CPPFLAGS_NODEBUG -DDEBUG_NODE_BASE -DUNIT_TEST"
 AC_SUBST(CPPFLAGS)
 AC_SUBST(CPPFLAGS_NODEBUG)
 
